[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Frutas/espeon food.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Items.gd" type="Script" id=2]
[ext_resource path="res://Sounds/Fruits.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=4]
radius = 9.0

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("payapa:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("payapa:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("payapa:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.371, 0.506 ) ]
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("payapa:scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0.506, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("payapa:scale:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0.506, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "collected"
length = 0.9
tracks/0/type = "bezier"
tracks/0/path = NodePath("payapa:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.351, -0.25, 0, 0.25, 0, 0.188, -0.25, 0, 0.25, 0, 0.046, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("payapa:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.351, -0.25, 0, 0.25, 0, 0.188, -0.25, 0, 0.25, 0, 0.046, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.6 )
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("payapa:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.35, -0.25, 0, 0.25, 0, 0.28, -0.25, 0, 0.25, 0, 0.35, -0.25, 0, 0.25, 0, 0.42, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("payapa:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.35, -0.25, 0, 0.25, 0, 0.35, -0.25, 0, 0.25, 0, 0.35, -0.25, 0, 0.25, 0, 0.35, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 )
}

[node name="payapa" type="Area2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="payapa" type="Sprite" parent="."]
position = Vector2( -2.38419e-07, -2.38419e-07 )
scale = Vector2( 0.506, 0.506 )
texture = ExtResource( 1 )

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 1 )
anims/collected = SubResource( 3 )
anims/idle = SubResource( 2 )

[node name="FruitCollected" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -8.0

[connection signal="body_entered" from="." to="." method="_on_frutas_body_entered"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
